# NiNo

./: .gitignore  CMakeLists.txt  FileScript.cpp  FileScript.hpp  Files.hpp  Log.hpp  MainWindow.cpp  MainWindow.hpp  NiNo.cpp  NiNo.hpp  PreBuild.sh  README.md  Shell.hpp
Programs/: .gitignore  CMakeLists.txt  IProgram.hpp  MakePrograms.sh
Programs/xscreensaver_video/: Program.cpp  Program.hpp
Programs/xscreensaver_video/Scripts/: xscr_help  xscr_instalar.sh  xscr_video.sh  xscr_videos.sh
